<resources>
    <string name="app_name">Dentaku</string>
    <string name="hint">値を入力してください</string>
    <string name="times">*</string>
    <string name="divide">/</string>
    <string name="arch_end">)</string>
    <string name="arch_start">(</string>
    <string name="button_clear">C</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="plusminus">+/-</string>
    <string name="par">%</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="back">←</string>
    <string name="button_dot">.</string>
</resources>