<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#222222"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_rouded_corners_5dp"
        >

        <EditText
            android:id="@+id/result"
            style="@style/edit_text_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/hint"
            android:padding="20dp"
            android:text="0"
            android:textColor="#fff"
            android:textSize="40sp"
            android:background="#00000000"
            app:layout_column="0"
            app:layout_row="1" />

    </LinearLayout>
    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/button_ac"
            style="@style/button_xp_clear"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/button_arch_start"
            style="@style/button_xp_symbol"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/arch_start"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_arch_end"
            style="@style/button_xp_symbol"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/arch_end"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_divide"
            style="@style/button_xp_symbol"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/divide"
            app:layout_column="4"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_7"
            style="@style/button_xp_normal"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_7"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_8"
            style="@style/button_xp_normal"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_8"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_9"
            style="@style/button_xp_normal"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_9"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_times"
            style="@style/button_xp_symbol"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/times"
            android:layout_columnWeight="1"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_4"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_4"
            android:layout_columnWeight="1"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_5"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_5"
            android:layout_columnWeight="1"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_6"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_6"
            android:layout_columnWeight="1"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_minus"
            style="@style/button_xp_symbol"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/minus"
            android:layout_columnWeight="1"
            app:layout_column="4"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_1"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_1"
            android:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button_2"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_2"
            android:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button_3"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_3"
            android:layout_columnWeight="1"
            app:layout_column="2"
            app:layout_row="3" />


        <Button
            android:id="@+id/button_plus"
            style="@style/button_xp_symbol"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/plus"
            android:layout_columnWeight="1"
            app:layout_column="3"
            app:layout_row="3"
            />

        <Button
            android:id="@+id/button_0"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_0"
            android:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/button_dot"
            style="@style/button_xp_normal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/button_dot"
            android:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/button_back"
            style="@style/button_xp_normal"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/back" />

        <Button
            android:id="@+id/button_equal"
            style="@style/button_xp_equal"
            android:layout_margin="3dp"
            android:onClick="onButtonClicked"
            android:text="@string/equal"
            android:layout_column="3"
            android:layout_row="4"
            android:layout_columnWeight="1" />
    </GridLayout>

    <TextView
        android:id="@+id/debug_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="#fff"
        android:text=""
        />
</LinearLayout>