<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/result"
                style="@style/edit_text_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="@string/hint"
                android:padding="20dp"
                android:text="0"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button_ac"
                style="@style/button_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/button_clear" />
<!--            <Button-->
<!--                android:id="@+id/button_par"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:onClick="onButtonClicked"-->
<!--                tools:ignore="OnClick"-->
<!--                android:text="@string/par"-->
<!--                android:layout_weight="1"-->
<!--                />-->

<!--            <Button-->
<!--                android:id="@+id/button_plusminus"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:onClick="onButtonClicked"-->
<!--                tools:ignore="OnClick"-->
<!--                android:text="@string/plusminus"-->
<!--                android:layout_weight="1"-->
<!--                />-->

            <Button
                android:id="@+id/button_back"
                style="@style/button_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            >

            <Button
                android:id="@+id/button_arch_start"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/arch_start" />

            <Button
                android:id="@+id/button_arch_end"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/arch_end" />

            <Button
                android:id="@+id/button_divide"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/divide" />

            <Button
                android:id="@+id/button_times"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/times" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            >

            <Button
                android:id="@+id/button_7"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button_8"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button_9"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button_minus"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/minus" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            >

            <Button
                android:id="@+id/button_4"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button_5"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button_6"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/button_6" />
            <Button
                android:id="@+id/button_plus"
                style="@style/button_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:onClick="onButtonClicked"
                android:text="@string/plus"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-11dp"
            android:gravity="right">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_1"
                        style="@style/button_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:onClick="onButtonClicked"
                        android:text="@string/button_1" />

                    <Button
                        android:id="@+id/button_2"
                        style="@style/button_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:onClick="onButtonClicked"
                        android:text="@string/button_2" />

                    <Button
                        android:id="@+id/button_3"
                        style="@style/button_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:onClick="onButtonClicked"
                        android:text="@string/button_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="-10dp">

                    <Button
                        android:id="@+id/button_0"
                        style="@style/button_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:onClick="onButtonClicked"
                        android:text="@string/button_0" />

                    <Button
                        android:id="@+id/button_dot"
                        style="@style/button_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:onClick="onButtonClicked"
                        android:text="@string/button_dot" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/button_equal"
                    style="@style/button_accent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:onClick="onButtonClicked"
                    android:text="@string/equal" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/debug_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="#fff"
            android:text=""
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>