<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dentaku_table"
        tools:ignore="MissingConstraints">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_row0"
            >
            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:padding="20dp" />
        </TableRow>
        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/button_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_clear"
                android:layout_weight="1"
                />
<!--            <Button-->
<!--                android:id="@+id/button_par"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:onClick="onButtonClicked"-->
<!--                tools:ignore="OnClick"-->
<!--                android:text="@string/par"-->
<!--                android:layout_weight="1"-->
<!--                />-->

<!--            <Button-->
<!--                android:id="@+id/button_plusminus"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:onClick="onButtonClicked"-->
<!--                tools:ignore="OnClick"-->
<!--                android:text="@string/plusminus"-->
<!--                android:layout_weight="1"-->
<!--                />-->

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/back"
                />
            <Button
                android:id="@+id/button_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/divide"
                />
            <Button
                android:id="@+id/button_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/times"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_row2"
            >
<!--            <Button-->
<!--                android:id="@+id/button_arch_start"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:onClick="onButtonClicked"-->
<!--                tools:ignore="OnClick"-->
<!--                android:text="@string/arch_start"-->
<!--                android:layout_weight="1"-->
<!--                />-->
<!--            <Button-->
<!--                android:id="@+id/button_arch_end"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:onClick="onButtonClicked"-->
<!--                tools:ignore="OnClick"-->
<!--                android:text="@string/arch_end"-->
<!--                android:layout_weight="1"-->
<!--                />-->
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_row3"
            >
            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_7"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_8"
                />
            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_9"
                />
            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/minus"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_row4"
            >
            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_4"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_5"
                />
            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_6"
                />
            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/plus"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_row5"
            >
            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:layout_weight="1"
                android:text="@string/button_1"
                />
            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_2"
                />
            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_3"
                />
            <Button
                android:id="@+id/button_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/equal"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_row6"
            >
            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:layout_weight="1"
                android:text="@string/button_0"
                />
            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onButtonClicked"
                tools:ignore="OnClick"
                android:text="@string/button_dot"
                />
            <Space></Space>
            <Space></Space>
        </TableRow>

    </TableLayout>


    <TextView
        android:id="@+id/debug_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        tools:ignore="ExtraText,MissingConstraints" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>